# FreetterDjango

./: .gitignore  manage.py  pyproject.toml
Freetter/: asgi.py  settings.py  urls.py  wsgi.py
Freetter/rest_api/: dev.py
account/: urls.py  views.py
tweet/: models.py  serializers.py  tests.py  urls.py  views.py
tweet/migrations/: 0001_initial.py  0002_alter_tweet_options_alter_tweet_id.py  0003_tweet_date_time_created_tweet_user.py  0004_alter_tweet_options.py  0005_alter_tweet_options.py  0006_tweetlike_alter_tweet_options_and_more.py  0007_tweet_parent.py
